# mbon-indices-study

./: .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json  tmp_stage05_review.md
.github/workflows/: publish-presentation.yml
.trae/documents/: Checkpoint A — Config Accessors and Validation for Loader Settings.md  Checkpoint B — Wire Loaders to Metadata Maps and Emit Canonical Columns.md  Config‑Driven Timestamp Parsing and Loader Settings for Stage 00.md  MBON Acoustic Indices Analysis — Implementation Plan.md  biostats-review-presentation-outline.md
.trae/rules/: project_rules.md
config/: analysis.yml  cv.yml  stations.yml
docs/presentations/: biostats-review-2025-12-12.qmd
notes/: analysis-plan-overview.md
old-scripts-for-reference-only/: 01_data_preparation.py  02_compute_taxa_metrics.py  03_taxa_specific_selection.py  03a_correlation_based_reduction.py  03b_feature_importance.py  03c_vif_final_selection.py  04_prepare_model_data.py  05_fit_glmm_models.R  05_fit_glmm_models_both_approaches.R  05b_individual_index_models.R  05c_component_ablation.R  06_compare_approaches.py  06_create_table1_effect_sizes.py  07_glmm_figures.py  08_glmm_slide_figures.py
scripts/: debug_loaders.py  stage00-a_verify_loaders.py  stage00-b_align.py  stage00-c_generate_qa.py  stage00_verify_loaders.py  stage01_index_reduction.py  stage02_community_metrics.py  stage03_feature_engineering.py  stage04_exploratory_viz.py  stage05_modeling.R  test_individual_loaders.py  verify_2021_completeness.py
specs/: SPEC_FORMAT.md  _index.md
(+73 files in other folders)
