[project]
name = "mbon-indices"
version = "0.1.0"
description = "MBON Acoustic Indices Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
    "pyarrow>=18.1.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]

[tool.ruff]
# Ruff configuration is in .ruff.toml

[tool.hatch.build.targets.wheel]
packages = ["src/python/mbon_indices"]
